{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 846,
  "lineage": "5ca9269e-60ef-5fca-2a5e-17468b336ae7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network_a_allow_http_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-05-02T13:18:13.502-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/consumer-projecta-rzp/global/firewalls/vpc-network-a-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "vpc-network-a-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/global/networks/vpc-network-a",
            "priority": 1000,
            "project": "consumer-projecta-rzp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/global/firewalls/vpc-network-a-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network_a",
            "google_folder.terraform_demo",
            "google_project.consumer_project_a",
            "google_project_service.consumer_project_a_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network_allow_http_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-05-02T13:18:34.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-project-rzp/global/firewalls/vpc-network-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "vpc-network-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/global/networks/vpc-network",
            "priority": 1000,
            "project": "data-project-rzp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/global/firewalls/vpc-network-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_folder.terraform_demo",
            "google_project.data_project",
            "google_project_service.data_project_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network_b_allow_http_ssh_rdp_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-05-02T13:18:13.604-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/consumer-projectb-rzp/global/firewalls/vpc-network-b-allow-http-ssh-rdp-icmp",
            "log_config": [],
            "name": "vpc-network-b-allow-http-ssh-rdp-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/global/networks/vpc-network-b",
            "priority": 1000,
            "project": "consumer-projectb-rzp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/global/firewalls/vpc-network-b-allow-http-ssh-rdp-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network_b",
            "google_folder.terraform_demo",
            "google_project.consumer_project_b",
            "google_project_service.consumer_project_b_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/zones/us-central1-a/disks/data-project-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/data-project-rzp/zones/us-central1-a/instances/data-project-vm",
            "instance_id": "2637380286808949320",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "e6BHZUjr8Ws=",
            "name": "data-project-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/global/networks/vpc-network",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/regions/us-central1/subnetworks/vpc-subnetwork",
                "subnetwork_project": "data-project-rzp"
              }
            ],
            "project": "data-project-rzp",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/zones/us-central1-a/instances/data-project-vm",
            "service_account": [
              {
                "email": "compute-service-account@data-project-rzp.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnetwork",
            "google_folder.terraform_demo",
            "google_project.data_project",
            "google_project_service.data_project_compute_service",
            "google_service_account.compute_service_account",
            "time_sleep.wait_90_seconds_enable_compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_engine_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/zones/us-central1-a/disks/consumer-a-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/consumer-projecta-rzp/zones/us-central1-a/instances/consumer-a-vm",
            "instance_id": "4898348747569595005",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "wzzKaEi0ToE=",
            "name": "consumer-a-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/global/networks/vpc-network-a",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/regions/us-central1/subnetworks/vpc-a-subnetwork",
                "subnetwork_project": "consumer-projecta-rzp"
              }
            ],
            "project": "consumer-projecta-rzp",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/zones/us-central1-a/instances/consumer-a-vm",
            "service_account": [
              {
                "email": "compute-service-account-a@consumer-projecta-rzp.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network_a",
            "google_compute_subnetwork.vpc_a_subnetwork",
            "google_folder.terraform_demo",
            "google_project.consumer_project_a",
            "google_project_service.consumer_project_a_compute_service",
            "google_service_account.compute_service_account_a",
            "time_sleep.wait_90_seconds_enable_compute_api_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute_engine_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220406",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/zones/us-central1-a/disks/consumer-b-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/consumer-projectb-rzp/zones/us-central1-a/instances/consumer-b-vm",
            "instance_id": "2918459340549358205",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "umLb5L1xDvg=",
            "name": "consumer-b-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/global/networks/vpc-network-b",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/regions/us-central1/subnetworks/vpc-b-subnetwork",
                "subnetwork_project": "consumer-projectb-rzp"
              }
            ],
            "project": "consumer-projectb-rzp",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/zones/us-central1-a/instances/consumer-b-vm",
            "service_account": [
              {
                "email": "compute-service-account-b@consumer-projectb-rzp.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network_b",
            "google_compute_subnetwork.vpc_b_subnetwork",
            "google_folder.terraform_demo",
            "google_project.consumer_project_b",
            "google_project_service.consumer_project_b_compute_service",
            "google_service_account.compute_service_account_b",
            "time_sleep.wait_90_seconds_enable_compute_api_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/data-project-rzp/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "data-project-rzp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/global/networks/vpc-network"
          },
          "dependencies": [
            "google_folder.terraform_demo",
            "google_project.data_project",
            "google_project_service.data_project_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/consumer-projecta-rzp/global/networks/vpc-network-a",
            "mtu": 0,
            "name": "vpc-network-a",
            "project": "consumer-projecta-rzp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/global/networks/vpc-network-a"
          },
          "dependencies": [
            "google_folder.terraform_demo",
            "google_project.consumer_project_a",
            "google_project_service.consumer_project_a_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/consumer-projectb-rzp/global/networks/vpc-network-b",
            "mtu": 0,
            "name": "vpc-network-b",
            "project": "consumer-projectb-rzp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/global/networks/vpc-network-b"
          },
          "dependencies": [
            "google_folder.terraform_demo",
            "google_project.consumer_project_b",
            "google_project_service.consumer_project_b_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_a_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-02T13:18:15.208-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/consumer-projecta-rzp/regions/us-central1/subnetworks/vpc-a-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "vpc-a-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/global/networks/vpc-network-a",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "consumer-projecta-rzp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projecta-rzp/regions/us-central1/subnetworks/vpc-a-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network_a",
            "google_folder.terraform_demo",
            "google_project.consumer_project_a",
            "google_project_service.consumer_project_a_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_b_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-02T13:18:14.971-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/consumer-projectb-rzp/regions/us-central1/subnetworks/vpc-b-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "vpc-b-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/global/networks/vpc-network-b",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "consumer-projectb-rzp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/consumer-projectb-rzp/regions/us-central1/subnetworks/vpc-b-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network_b",
            "google_folder.terraform_demo",
            "google_project.consumer_project_b",
            "google_project_service.consumer_project_b_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-05-02T13:18:35.965-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/data-project-rzp/regions/us-central1/subnetworks/vpc-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "vpc-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-project-rzp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-project-rzp/regions/us-central1/subnetworks/vpc-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_folder.terraform_demo",
            "google_project.data_project",
            "google_project_service.data_project_compute_service",
            "time_sleep.wait_90_seconds_enable_compute_api"
          ]
        }
      ]
    }
  ]
}